--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "0.69.1",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-reanimated": "^2.9.1",
+    "react-native-redash": "^14.2.2",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
     "react-native-webview": "^11.22.7"
